# project_todo

./: Just_TODO_it.sql  README.md  pyproject.toml
project_todo/: __init__.py  __main__.py
project_todo/common/: __init__.py  entity_Interface.py  routing.py
project_todo/entities/: __init__.py  category.py  category_has_event.py  event.py  event_category.py  occurrence.py
project_todo/views/: __init__.py  add_category.py  add_event.py  alter_category.py  alter_event.py  alter_occurrence.py  main_menu.py
tests/: test_entities_ocurrence.py  test_views_add_category.py  test_views_alter_event.py
